[gd_scene load_steps=14 format=3 uid="uid://dp3wlomvcq82h"]

[ext_resource type="Texture2D" uid="uid://bm0m7frt3v7ij" path="res://Sprites/Player/ghost-sheet.png" id="1_mftk3"]
[ext_resource type="Script" uid="uid://d373tx345irw2" path="res://GameNodes/Enemies/ghost_enemy.gd" id="1_yhssl"]
[ext_resource type="Shader" uid="uid://b3klq82o5gsp6" path="res://GameNodes/Player/player_controller.gdshader" id="3_6kkdd"]
[ext_resource type="Material" uid="uid://nxou8bda2o5m" path="res://Materials/Particles/ghost_enemy.tres" id="4_p6cek"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yhssl"]
atlas = ExtResource("1_mftk3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kkdd"]
atlas = ExtResource("1_mftk3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6cek"]
atlas = ExtResource("1_mftk3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bkjj"]
atlas = ExtResource("1_mftk3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5frjw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhssl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kkdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6cek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bkjj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vg3uv"]
radius = 4.0
height = 14.0

[sub_resource type="Gradient" id="Gradient_yhssl"]
offsets = PackedFloat32Array(0, 0.638614)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6kkdd"]
gradient = SubResource("Gradient_yhssl")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p6cek"]
shader = ExtResource("3_6kkdd")

[node name="Ghost_Enemy" type="Area2D"]
scale = Vector2(4, 4)
script = ExtResource("1_yhssl")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5frjw")
frame_progress = 0.233589
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vg3uv")

[node name="MoveTimer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.788235, 0.458824, 0.933333, 1)
texture = SubResource("GradientTexture2D_6kkdd")
texture_scale = 2.0

[node name="RecordTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartAfterTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnParticles" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_p6cek")
emitting = false
amount = 107
one_shot = true
process_material = ExtResource("4_p6cek")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="RecordTimer" to="." method="_on_record_timer_timeout"]
[connection signal="timeout" from="StartAfterTimer" to="." method="_on_start_after_timer_timeout"]
